--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title> Maratona Explorer</title>
 </head>
 <body>
-  <img src="https://gist.githubusercontent.com/maykbrito/0acdf4ce2d3c1bbec1fe2e6ed30171aa/raw/6f4c7c043c6393bdd9c6e61988a0eef0ba6f8ab1/cristal-ball.svg" alt="Cristal Ball">
+  <img src="./assests/bola-de-cristal.png" alt="Cristal Ball">
   <h1> Vou revelar o seu destino</h1>
   <p> Clique em fazer pergunta para que seu destino seja revelado.</p>
   <input type="text" placeholder="Digite sua pergunta"/>
