--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Maratona Explorer</title>
-</head>
-<body>
-  <img src="./assests/bola-de-cristal.png" alt="Cristal Ball">
-  <h1> Vou revelar o seu destino</h1>
-  <p> Clique em fazer pergunta para que seu destino seja revelado.</p>
-  <input type="text" placeholder="Digite sua pergunta"/>
-  <button> Fazer pergunta</button>
-</body>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="style.css" />
+
+    <title>Maratona Explorer</title>
+  </head>
+  <body>
+    <div id="container">
+      <img src="./assests/bola-de-cristal.png" alt="Cristal Ball" />
+      <h1>Vou revelar o seu destino</h1>
+      <p>Clique em fazer pergunta para que seu destino seja revelado.</p>
+      <input type="text" placeholder="Digite sua pergunta" />
+      <button>Fazer pergunta</button>
+    </div>
+  </body>
 </html>
