--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./src/style.css" />
 
     <title>Maratona Explorer</title>
   </head>
   <body>
     <div id="container">
-      <img src="./assests/bola-de-cristal.png" alt="Cristal Ball" />
+      <img src="./src/assests/bola-de-cristal.png" alt="Cristal Ball" />
       <h1>Vou revelar o seu destino</h1>
       <p>Clique em fazer pergunta para que seu destino seja revelado.</p>
-      <input type="text" placeholder="Digite sua pergunta" />
-      <button>Fazer pergunta</button>
+      <input id="inputPergunta" type="text" placeholder="Digite sua pergunta" />
+      <button onclick="fazerPergunta()">Fazer Pergunta</button>
+
+      <h3 id="resposta"></h3>
     </div>
   </body>
+
+  <script src="./src/script.js"></script>
 </html>
